<resources>
    <string name="app_name">MVVM</string>
    <string name="architecture_log_in">Architecture Log in</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="architecture_registration">Architecture Registration</string>
    <string name="full_name">Full name</string>
    <string name="architecture">Architecture</string>
    <string name="show_all_user_information">Show all user information</string>
    <string name="text_btn_setting">Setting</string>
    <string name="title_activity_auth">AuthActivity</string>
</resources>